# orr-vae

./: .gitignore  .gitmodules  AGENTS.md  CCVAE.py  README.md  make_alloy_surface.py  paper.md  pyproject.toml  requirements.txt  slab_test.py  test.py  tool.py
ccgan/: 01_generate_random_structures.py  02_calculate_overpotentials.py  03_conditional_gan.py  04_generate_new_structures.py  README.md  analyze_orr_catalyst_data.py  gen_test.py  run_all_calculations.py  run_uncalculated.py  tool.py
ccvae/: 01_generate_random_structures.py  03_conditional_vae.py  04_generate_new_structures.py  README.md  analyze_orr_catalyst_data.py  eta_from_json.py  make_alloy_random.py  run_all_calculations.py  run_uncalculated.py  tool.py  view.py
ccvae_2/: 01_generate_random_structures.py  03_conditional_vae.py  04_generate_new_structures.py  README.md  analyze_orr_catalyst_data.py  run_all_calculations.py  run_uncalculated.py  tool.py  visualize_latent_space.py
ccvae_3/: data_loader_from_json.py  run_all_calculations.py
code/: 01_generate_random_structures.py  02_calculate_overpotentials.py  02_run_all_calculations.py  02_run_uncalculated.py  03_conditional_vae.py  04_generate_new_structures.py  05_visualize_latent_space.py  06_analyze_orr_catalyst_data.py  CCVAE_test.py  analyze_dataset.py  calc_orr_energy.py  calc_orr_overpotential.py  calc_orr_reaction_energy.py  catalyst_ccVAE.py  catalyst_ccVAE_2.py  ccVAE_pred_test.py  ccVAE_pred_test_2.py  data_loader_from_json.py  eta_from_json.py  make_alloy_VAE.py  make_alloy_random.py  make_alloy_surface.py  make_structure_deta_loader.py  (+9 more)
(+3126 files in other folders)
