[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orr-vae"
version = "0.1.0"
description = "ORR catalyst screening workflow with overpotential/formation-energy calculations and CVAE"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "orr-vae contributors"}
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "ase>=3.22",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "fairchem-core",
  "orr-overpotential-calculator @ git+https://github.com/ishikawa-group/orr-overpotential-calculator.git@develop",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
orr-vae = "orr_vae.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["orr_vae*"]

[tool.setuptools.package-data]
"orr_vae.workflows" = ["solvent_correction.yaml"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
